# lab1_tp

./: 1.drawio  CMakeLists.txt  README.md  base.cpp  fantast.cpp  keeper.cpp  lab1.docx  main.cpp  out.csv  poet.cpp  romanist.cpp  run.bat
